--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
