--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "lintfix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "dependencies": {
-    "@nuxtjs/auth-next": "5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
+    "cookie": "^0.5.0",
     "core-js": "^3.19.3",
+    "js-cookie": "^3.0.1",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
     "sass": "^1.52.3",
     "sass-loader": "10.0.5",
     "vue": "^2.6.14",
+    "vue-cookies": "^1.8.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vuex-persistedstate": "^4.1.0",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
