--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/google-analytics": "^2.4.0",
+    "@vue/shared": "^3.2.45",
     "bootstrap-vue": "^2.23.1",
     "cookie": "^0.5.0",
     "core-js": "^3.19.3",
@@ -25,6 +25,7 @@
     "sass-loader": "10.0.5",
     "vue": "^2.6.14",
     "vue-cookies": "^1.8.1",
+    "vue-gtag": "^1.16.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuex-persistedstate": "^4.1.0",
