fix: 수정 등록 사진 업로드 기능 구현

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap-vue": "^2.23.1",
     "cookie": "^0.5.0",
     "core-js": "^3.19.3",
+    "form-data": "^4.0.0",
     "js-cookie": "^3.0.1",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
