--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "js-cookie": "^3.0.1",
     "node-sass": "^7.0.1",
     "nuxt": "^2.15.8",
+    "nuxt-user-agent": "^1.2.2",
     "sass": "^1.52.3",
     "sass-loader": "10.0.5",
     "vue": "^2.6.14",
