--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "core-js": "^3.19.3",
     "form-data": "^4.0.0",
     "js-cookie": "^3.0.1",
-    "node-sass": "^7.0.1",
+    "node-sass": "^5.0.1",
     "nuxt": "^2.15.8",
     "nuxt-user-agent": "^1.2.2",
-    "sass": "^1.52.3",
-    "sass-loader": "10.0.5",
+    "sass": "^1.56.1",
+    "sass-loader": "^10.2.0",
     "vue": "^2.6.14",
     "vue-cookies": "^1.8.1",
     "vue-gtag": "^1.16.1",
