--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@vue/shared": "^3.2.45",
-    "bootstrap-vue": "^2.23.1",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.23.0",
     "cookie": "^0.5.0",
     "core-js": "^3.19.3",
     "form-data": "^4.0.0",
