--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
     "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1"
   },
-  "homepage": "https://why-not-here.netlify.app/gather/all"
+  "homepage": "."
 }
