--- a/package.json
+++ b/package.json
@@ -43,5 +43,6 @@
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1"
-  }
+  },
+  "homepage": "https://why-not-here.netlify.app/gather/all"
 }
