--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nuxt-user-agent": "^1.2.2",
     "sass": "^1.56.1",
     "sass-loader": "10",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
     "vue-cookies": "^1.8.1",
     "vue-gtag": "^1.16.1",
