--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-gtag": "^1.16.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue-toasted": "1.1.28",
     "vuex-persistedstate": "^4.1.0",
     "webpack": "^4.46.0"
   },
