--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-clipboard2": "0.3.3",
     "vue-cookies": "^1.8.1",
     "vue-gtag": "^1.16.1",
+    "vue-persian-datetime-picker": "2.10.4",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vue-toasted": "1.1.28",
