--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "sass": "^1.56.1",
     "sass-loader": "10",
     "v-calendar": "^2.4.1",
+    "v-owl-carousel": "1.0.8",
     "vue": "^2.6.14",
     "vue-clipboard2": "0.3.3",
     "vue-cookies": "^1.8.1",
