--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/gtm": "2.4.0",
     "@vue/shared": "^3.2.45",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.23.0",
