--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "nuxt-user-agent": "^1.2.2",
     "sass": "^1.56.1",
     "sass-loader": "10",
+    "swiper": "^5.3.7",
     "v-calendar": "^2.4.1",
     "v-owl-carousel": "1.0.8",
     "vue": "^2.6.14",
+    "vue-awesome-swiper": "^4.1.0",
     "vue-clipboard2": "0.3.3",
     "vue-cookies": "^1.8.1",
     "vue-gtag": "^1.16.1",
