--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-awesome-swiper": "^4.1.0",
     "vue-clipboard2": "0.3.3",
     "vue-cookies": "^1.8.1",
+    "vue-dompurify-html": "^2.6.0",
     "vue-gtag": "^1.16.1",
     "vue-persian-datetime-picker": "2.10.4",
     "vue-server-renderer": "^2.6.14",
